--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "pretty": "prettier --insert-pragma --write \"./**/*.js\""
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2"
